hphp/hack/test/typecheck/expression_trees/splice_err3.php.exp
ERROR: File "splice_err3.php", line 13, characters 23-27:
Invalid argument (Typing[4110])
  File "expr_tree.php", line 366, characters 26-35:
  Expected `ExampleInt`
  File "expr_tree.php", line 92, characters 40-52:
  But got `ExampleString`
